# blammo-qc

./: .gitignore  Cargo.toml  NOTES.md  README.md
.github/workflows/: build-static.yml
src/: cli.rs  main.rs  metrics.rs  model.rs  report.rs
tests/: integration_cli.rs
