[package]
name = "blammo-qc"
version = "0.1.10"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
num_cpus = "1.16"
plotly = { version = "0.10", default-features = false, features = ["plotly_embed_js"] }
rayon = "1.10"
rust-htslib = { version = "0.46", features = ["static", "libdeflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.12"
